--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-COMPOSE_PROJECT_NAME=affiysan
+COMPOSE_PROJECT_NAME=affistant
 
 DEBUG=1
 SECRET_KEY='django-insecure-xzze4w+mb264&nn16#_$yg+#&nx4&9z!6p%h2%kop1_se^+_k+'
 DJANGO_ALLOWED_HOSTS=*
-DATABASE_URL=postgres://affiysan:affiysan@db:5432/affiysan_db
+DATABASE_URL=postgres://affistant:affistant@db:5432/affistant_db
 REDIS_URL=redis://redis:6379/0
